# Middleware

./: BUILD.txt  CHANGES  LatviaEIDSetup.iss  Latvian.isl  Thumbs.db  gtk_config_icons.txt  latvia-eid.conf  latvia-eid.conf.nix
Microsoft CNG Development Kit/Help/: cngsdk.chm
Microsoft CNG Development Kit/Include/: bcrypt.h  cardmod.h  ncrypt.h  sslprovider.h
Microsoft CNG Development Kit/Lib/IA64/: bcrypt.lib
OTLvCSP/: OTLvCSP.sln
OTLvCSP/OTLvCSP/: OTLVCSP.cpp  OTLVCSP.def  OTLvCSP.rc  OTLvCSP.vcxproj  autoreg.cpp  defs.h
OTLvCSPCore/: OTLvCSPCore.rc  OTLvCSPCore.sln  OTLvCSPCore.vcxproj  OTLvCSPCore.vcxproj.filters  OTLvCspCore.def  config.h  csp-debug.cpp  csp-debug.h  csp11.cpp  csp11.h  misscrypt.h  missdef.h  pkcs11-helpers.cpp  pkcs11-helpers.h  pkcs11-services.cpp  pkcs11-services.h  resource.h  ui-pin.cpp  ui-pin.h
OTLvCSPCore/Debug/: CL.read.1.tlog  CL.write.1.tlog  OTLvCSPCore.res  OTLvCSPCore.write.1.tlog  OTLvCSPCore_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
OTLvCertProp/: OTLvCertProp.cpp  OTLvCertProp.rc  OTLvCertProp.vcxproj  OTLvCertProp.vcxproj.filters  ReadMe.txt  Resource.h  reader.cpp  reader.h  stdafx.h
OTLvCertProp/Debug/: CL.read.1.tlog  CL.write.1.tlog  OTLvCertProp.lastbuildstate  OTLvCertProp.res  OTLvCertProp_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
OTLvP11/: OTLvP11.def  OTLvP11.rc  OTLvP11.sln  OTLvP11.vcxproj  OTLvP11.vcxproj.filters  resource.h
OTLvP11/Debug/: CL.read.1.tlog  CL.write.1.tlog  OTLvP11.res  OTLvP11_manifest.rc  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
PinTool/: Makefile  Makefile.osx  Makefile.rhel  PinTool.cpp  PinTool.fbp  PinTool.h  PinTool.rc  PinTool.sln  PinTool.vcxproj  PinTool.vcxproj.filters  Thumbs.db  cryptoki.cpp  cryptoki.h  main.cpp  otlv-pintool.desktop  pintool.icns  pintool.mo  pintool.po  resource.h  wx.mo  wx.po
PinTool/Debug/: CL.read.1.tlog  CL.write.1.tlog  PinTool.res  PinTool_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
PinTool/Latvia-eID-PinTool.app/Contents/: Info.plist
PinTool/help/en/: help.htm
PinTool/help/en/contents/: filelist.xml  header.htm
PinTool/help/lv/: help.htm
PinTool/help/lv/contents/: filelist.xml  header.htm
PinTool/res/: about.png.h  arrow.png.h  cancel.png.h  exit.png.h  help.png.h  language.png.h  logs.png.h  lv.png.h  oberthur.png.h  ok.png.h  pinpad.png.h  pintool.ico.h  pintoolicon.xpm  settings.png.h  us.png.h  welcome.PNG.h  welcome_lv.PNG.h  welcome_lv.c
opensc-0.12.2/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
opensc-0.12.2/MacOSX/: Makefile.in  build-package.in  opensc-uninstall
opensc-0.12.2/MacOSX/10.5/resources/: InstallationCheck.strings  ReadMe.html  ReadMe.html.in
opensc-0.12.2/MacOSX/10.5/scripts/: InstallationCheck  postflight
opensc-0.12.2/MacOSX/10.6/resources/: ReadMe.html  (+2 more)
opensc-0.12.2/doc/: Makefile.in
opensc-0.12.2/etc/: Makefile.am  Makefile.in
opensc-0.12.2/src/: Makefile.in
opensc-0.12.2/src/common/: Makefile.in  simclist.c
opensc-0.12.2/src/libopensc/: Makefile.am  Makefile.in  card-authentic.c  card-iasecc.c  card-rtecp.c  card-rutoken.c  card.c  cards.h  ctx.c  log.c  opensc.h  pkcs15-pin.c  pkcs15.h  reader-pcsc.c  sec.c
opensc-0.12.2/src/minidriver/: Makefile.am  Makefile.in  opensc-minidriver.inf
opensc-0.12.2/src/pkcs11/: Makefile.am  Makefile.in  framework-pkcs15.c  mechanism.c  misc.c  pkcs11-object.c  sc-pkcs11.h  slot.c
opensc-0.12.2/src/pkcs15init/: Makefile.in  pkcs15-iasecc.c  profile.c
opensc-0.12.2/src/scconf/: Makefile.in
opensc-0.12.2/src/tests/: Makefile.am  Makefile.in
opensc-0.12.2/src/tools/: Makefile.am  Makefile.in  opensc-explorer.c  pkcs15-tool.c
opensc-0.12.2/win32/: Makefile.in  opensc-install.bat  versioninfo.rc  winconfig.h
openssl/: openssl_osx.tar.bz2
zlib/lib/: zlib.lib  zlibd.lib
zlib/x64/lib/: zlib.lib  zlibd.lib
(+21 files in other folders)
